--- a/video-css-4/css/visual-effects.css
+++ b/video-css-4/css/visual-effects.css
@@ -55,3 +55,18 @@ html {
     filter: drop-shadow(1rem 1rem 1rem steelblue); 
     /* la sombra se la aplica a la foto (una foto con transparencia), no puede sombra multiple */
 }
+
+.linear-gradient { /* podemos usar solo background, pero es buena práctica q especifiquemos */
+    background-image: linear-gradient(red, green);
+    background-image: linear-gradient(red, green, yellow);
+    background-image: linear-gradient(0deg,red, green, yellow);/* de 0 a 360grados puede girar */
+    background-image: linear-gradient(20deg,red, green, yellow);
+    background-image: linear-gradient(90deg,red, green, yellow);
+    background-image: linear-gradient(to right,red, green, yellow);/* tamb podemos indicarle la dirección, el último color será el q se alinie */
+    background-image: linear-gradient(to top,red, green, yellow);
+    background-image: linear-gradient(to bottom,red, green, yellow);
+    background-image: linear-gradient(to top left,red, green, yellow);/* el amarillo se irá arriba del lado izquierdo */
+    background-image: linear-gradient(to bottom right,red, green, yellow);
+    background-image: linear-gradient(90deg,red 30%, green 70%, yellow);
+    background-image: linear-gradient(180deg, steelblue 33%, white 34% 67%, steelblue 68%);/* no es necesario que ponga del 0 al 33, se entiende, o del 68 al 100 */
+}
