--- a/video-css-4/css/visual-effects.css
+++ b/video-css-4/css/visual-effects.css
@@ -70,3 +70,38 @@ html {
     background-image: linear-gradient(90deg,red 30%, green 70%, yellow);
     background-image: linear-gradient(180deg, steelblue 33%, white 34% 67%, steelblue 68%);/* no es necesario que ponga del 0 al 33, se entiende, o del 68 al 100 */
 }
+
+.radial-gradient {
+    background-image: radial-gradient(cyan, magenta);
+    background-image: radial-gradient(cyan, magenta, yellow);
+    background-image: radial-gradient(circle 4rem, cyan 30%, magenta 80%, yellow);
+    background-image: radial-gradient(
+        circle 100px, 
+        cyan 30%, 
+        magenta 60%, 
+        yellow 90%
+    );
+    background-image: radial-gradient(
+        circle 100px at top, /* bottom, left, etc entonces el circulo baja, center, valor por defecto */
+        cyan 30%, 
+        magenta 60%, 
+        yellow 90%
+    );
+    background-image: radial-gradient(
+        circle 100px at bottom left, /* se puede combinar */
+        cyan 30%, 
+        magenta 60%, 
+        yellow 90%
+    );
+    background-image: radial-gradient(
+        ellipse 100px 50px, /* dimenciones en x y en y */
+        cyan 30%, 
+        magenta 60%, 
+        yellow 90%
+    );
+    background-image: radial-gradient(
+        circle 100px , 
+        red 50%, 
+        white 50%
+    );
+}
