--- a/video-css-4/css/visual-effects.css
+++ b/video-css-4/css/visual-effects.css
@@ -177,3 +177,43 @@ html {
         conic-gradient(cyan 0% 50%, magenta 50% 80%, grey 80%);
     border-radius: 50%;
 }
+
+.card {
+    width: 600px;
+    height: 400px;
+    border: thick solid #000;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5rem;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 0 50%; /* que empieze en cero del lado izquierdo */
+    filter: blur(1rem);
+    filter: blur(0.25rem);
+    filter: blur(0.15rem);
+    filter: brightness(1); /* de 0 a 1 */
+    filter: brightness(0.15); 
+    filter: contrast(0);
+    filter: contrast(0.75);
+    filter: contrast(2);
+    filter: grayscale(0.50);
+    filter: grayscale(1); 
+    filter: sepia(0.25);
+    filter: sepia(1); /* vintage */
+    filter: hue-rotate(30deg);
+    filter: hue-rotate(60deg);
+    filter: hue-rotate(150deg);
+    filter: hue-rotate(240deg);
+    filter: invert(0); /* invierte los colores */
+    filter: invert(1); 
+    filter: opacity(0); /* de 0 a 75 */
+    filter: opacity(0.50);
+    filter: opacity(0.75);
+    filter: saturate(0);
+    filter: saturate(0.75);
+    filter: saturate(3);
+}
