--- a/video-css-4/css/visual-effects.css
+++ b/video-css-4/css/visual-effects.css
@@ -273,3 +273,13 @@ html {
         opacity(0.75)
         invert(1);
 }
+
+.dark-mode {
+    background-color: #fff; /* es necesario definir primero esto bg-color y color */
+    color: #000;
+    filter: invert(1); /* invierte, se va al color contrario */
+}
+
+.dark-mode img {
+    filter: invert(1);
+}
