--- a/video-css-4/css/visual-effects.css
+++ b/video-css-4/css/visual-effects.css
@@ -236,6 +236,12 @@ html {
     position: relative;
 }
 
+.absolute {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .backdrop-filter,
 .backdrop-filter-multiple {
     position: absolute;
@@ -282,4 +288,23 @@ html {
 
 .dark-mode img {
     filter: invert(1);
+}
+
+.bland-modes img {
+    mix-blend-mode: normal; /* default */
+    mix-blend-mode: color;
+    mix-blend-mode: color-dodge;
+    mix-blend-mode: color-burn;
+    mix-blend-mode: screen;
+    mix-blend-mode: multiply;
+    mix-blend-mode: saturation;
+    mix-blend-mode: difference;
+    mix-blend-mode: luminosity;
+    mix-blend-mode: hue;
+    mix-blend-mode: exclusion;
+    mix-blend-mode: hard-light;
+    mix-blend-mode: soft-light;
+    mix-blend-mode: lighten;
+    mix-blend-mode: darken;
+    mix-blend-mode: overlay;
 }
