--- a/video-css-4/css/visual-effects.css
+++ b/video-css-4/css/visual-effects.css
@@ -352,3 +352,55 @@ html {
     clip-path: polygon(75% 0%, 100% 50%, 100% 100%, 0% 100%, 25% 50%, 0 16%);
 }   
 
+.shapes {
+    border: thick solid black;
+    padding: 1rem;
+    margin: 0 auto 5rem;
+    max-width: 800px;
+    /* font-size: 1.25rem; */
+}
+
+.shapes img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    /* object-position: 0 50%; */
+}
+
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
+.shape-1 {
+    margin: 4rem 2rem 4rem 0;
+    shape-outside: ellipse();
+    shape-outside: circle();/* el texto se adapta a la imagen que es circular */
+    /* también puede ser de forma poligono */
+}
+
+.shape-2 {
+    margin: 3rem 0 3rem 2rem;
+    shape-outside: ellipse();
+}
+
+.shape-3 {
+    margin: 2rem 8rem 0 0;
+    shape-outside: polygon(
+    1% 19%,
+    25% 4%,
+    52% 4%,
+    59% 16%,
+    69% 37%,
+    66% 53%,
+    63% 67%,
+    72% 77%,
+    83% 84%,
+    98% 99%,
+    1% 99%
+  ); /* forma de montaña, se pueden hacer distintos dibujos, en vez de clip-path shipe-outside */
+}
