--- a/video-css-4/css/scroll-snap-slides.css
+++ b/video-css-4/css/scroll-snap-slides.css
@@ -84,3 +84,14 @@ body {
 .carousel-slide:nth-child(even) {
     background-color: #1e2345;
 }
+
+.gradient-text {
+    background-image: linear-gradient(45deg, magenta, yellow);
+    -ms-background-clip: text; /* es necesario estos prefijos porque todavia todos los navegadores no tienen soporte */
+    -moz-background-clip: text;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -ms-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent;
+}
