--- a/video-css-4/css/motion.css
+++ b/video-css-4/css/motion.css
@@ -59,4 +59,28 @@ html {
     background-color: cyan;
     border-color: red;
     border-radius: 2rem;
+    /* border-style: dotted; no es una propiedad animable*/
+}
+
+.transitions .card {
+    /* transition: all 2s ease; esto seria para todas*/
+    transition: opacity 1s ease-out,
+        border-color 3s steps(3),/* lo hará en pasos */
+        filter 2s ease-in 1s,
+        box-shadow 1.5s linear 2s;
+    }
+
+.transitions .card:hover {
+    opacity: .75;
+    border-color: orchid;
+    filter: blur(0.rem);
+    box-shadow: 1rem 1rem 2rem 0.5rem #000;
+}
+
+.transitions .card img {
+    transition: object-position 2s ease-in 3s;
+}
+
+.transitions .card img:hover {
+    object-position: 100% 50%;
 }
