--- a/video-css-4/css/motion.css
+++ b/video-css-4/css/motion.css
@@ -156,6 +156,10 @@ html {
     transform: rotate3d(1, 1, 1, 45deg);
     transform: rotate3d(1, 0.5, 0, -45deg);
     transform: rotate3d(-1, 2.5, -2, 60deg);
+    /* recibe 16 valores -> matrix3d */
+    transform: matrix3d(1, 0, 0, 0, 0, 1, 6, 0, 0, 0, 1, 0, 50, 100, 0, 1.1);
+    transform: rotate3d(-1,2.5,-2,60deg);
+    transform: rotate3d(-1,2.5,-2,60deg)translate3d(2rem, 50%, -3rem) scale3d(2, -0.5,3);
 }
 
 
