--- a/video-css-4/css/motion.css
+++ b/video-css-4/css/motion.css
@@ -162,5 +162,20 @@ html {
     transform: rotate3d(-1,2.5,-2,60deg)translate3d(2rem, 50%, -3rem) scale3d(2, -0.5,3);
 }
 
+.transform-origin img {
+    transition: transform 2s ease-in-out;
+    /* transform-origin: x y z; */
+    transform-origin: 50% 50% 0;
+    transform-origin: 0 0; /* gira completamente, tomando como punto la izquierda superior */
+    transform-origin: 0;
+    transform-origin: top left; /* podriamos hacer todas las combinaciones */
+    transform-origin: top right;
+    transform-origin: center left;
+    transform-origin: -2rem -3rem;
+    transform-origin: 25% 75%;
+    transform-origin: -5% -5%; 
+}
 
-
+.transform-origin img:hover {
+    transform: rotate(360deg);
+}
